[package]
name = "rcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.92"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
toml = "0.8.19"
zxcvbn = "3.1.0"
blake3 = "1.5.4"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
tracing = "0.1.41"